Randomize, and some other brush ups

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <h1>Flash Cars</h1>
     <button class="start-button">Start Game</button>
     <div class="score">
-    <aside class="score-right">Score Right: 0</aside>
-    <aside class="score-wrong">Score Wrong: 0</aside>
+    <aside>Score Right: <span class="score-right">0</span>/10</aside>
+    <aside>Score Wrong: <span class="score-wrong">0</span>/5</aside>
     </div>
     <section id="flashcard">
-        <article class="card">
+        <!-- <article class="card">
     <div class="question-container">
     <div class="question"></div>
-    </div>
-    <div class="answer-container">
-        <div class="answer"></div>
-    </div>
-</article>
-    <div class="card-stack-1"></div>
+    </div> -->
+    <!-- <div class="answer-container"> -->
+        <!-- <div class="answer"></div> -->
+    <!-- </div> -->
+<!-- </article> -->
+    <!-- <div class="card-stack-1"></div>
     <div class="card-stack-2"></div>
-    <div class="card-stack-3"></div>
+    <div class="card-stack-3"></div> -->
     </section>
     <section id="controls">
         <form>
