--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <input type="submit" value="submit">
         </form>
         <button class="next-card">Next Card</button>
+        <button class="reset-game">Play Again!</button>
     </section>
     <script src="script.js"></script>
 </body>
