added video when you lose

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <button class="next-card">Next Card</button>
         <button class="reset-game">Play Again!</button>
     </section>
+    <div id="modal">
+        <a href="#" id="close">Close</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ymPpIzaanhY" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
